<?xml version="1.0"?>
<package>
  <name>mrosbridger</name>
  <version>1.0.0</version>
  <description>The mrosbridger application</description>
  <maintainer email="fupinjun@limxdynamics.com">pinkie.fu</maintainer>
  <author email="fupinjun@limxdynamics.com">pinkie.fu</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>topic_tools</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>topic_tools</run_depend>
</package>
