<?xml version="1.0"?>
<package>
  <name>std_msgs</name>
  <version>1.0.0</version>
  <description>The std_msgs package</description>
  <maintainer email="fupinjun@limxdynamics.com">pinkie.fu</maintainer>
  <author email="fupinjun@limxdynamics.com">pinkie.fu</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
</package>
